# airtable-to-sqlite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yml  testing.yml
src/airtable_to_sqlite/: __about__.py  __main__.py  constants.py  main.py  schema.py
src/airtable_to_sqlite/cli/: __init__.py
tests/: conftest.py  dummy_returns.py  test_cli.py  test_main.py  test_schema.py
